--- a/translations/kangyur/translations/046-001_toh95_play_in_full.xml
+++ b/translations/kangyur/translations/046-001_toh95_play_in_full.xml
@@ -31,7 +31,7 @@
                     daughter, and son</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 4.48.14 <date>2023</date>
+                <edition>v 4.48.15 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -67,7 +67,7 @@
 
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-19T18:58:51.331Z" user="admin">19/07/2023 18:58:51</note>
+                <note type="lastUpdated" date-time="2023-07-23T16:50:24.013Z" user="admin">23/07/2023 16:50:24</note>
                 <note type="updated" update="translation-status" value="1" date-time="2013-05-22T12:00:00.000Z" user="admin">Note added retrospectively based on publication date</note>
                 <note type="updated" update="translation-status" value="1.a" date-time="2013-05-22T12:00:00.000Z" user="admin">Note added retrospectively based on publication date</note>
                 <note type="updated" update="text-version" value="v 4.41" date-time="2019-06-18T02:38:10.693Z" user="celso">v 4.41 2019</note>
@@ -110,6 +110,7 @@
                 <note type="updated" update="text-version" value="4.48.12" date-time="2023-04-26T23:29:28.936Z" user="martina-cotter">Updated typo.</note>
                 <note type="updated" update="text-version" value="4.48.13" date-time="2023-07-19T11:40:37.044Z" user="john">replaced Bliss-Gone with Well-Gone.</note>
                 <note type="updated" update="text-version" value="4.48.14" date-time="2023-07-19T18:58:48.082Z" user="john">Further edits to intro and biblio following Silk 2022; more to be done.</note>
+                <note type="updated" update="text-version" value="4.48.15" date-time="2023-07-23T16:50:20.744Z" user="celso">minor corrections to a few glossary entries</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -19302,7 +19303,7 @@
                         ou Développement des Jeux, Contenant l’Histoire du Bouddha Çakya-mouni. Première Partie—Texte Tibétain</title>. Paris: Imprimerie Royale, 1847.</bibl>
                     <bibl xml:id="UT22084-046-001-2335">Lefmann, Salomon. <title xml:lang="Sa-Ltn">Lalita
                             Vistara</title>. Halle: Verlag der Buchhandlung des Waisenhauses, 1882.</bibl>
-                    <bibl xml:id="UT22084-046-001-2535">Mitra, R. L. (1853–1877). <title xml:lang="en">The Lalita Vistara or 
+                    <bibl xml:id="UT22084-046-001-5061">Mitra, R. L. (1853–1877). <title xml:lang="en">The Lalita Vistara or 
                         Memoirs of the Early Life of S’a’kya Siñha</title>. Bibliotheca Indica: A Collection of Oriental Works, 
                         Old Series, nos. 51, 73, 143, 144, 145, 237. Calcutta: Asiatic Society of Bengal, 1853–1877.</bibl>
                 </div>
@@ -20448,8 +20449,8 @@
                     <item>
                         <gloss xml:id="UT22084-046-001-2451" type="place" mode="match">
                             <term>Stainless Array</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested">bkod pa dri ma med pa</term>
-                            <term xml:lang="bo" type="sourceAttested">བཀོད་པ་དྲི་མ་མེད་པ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource">bkod pa dri ma med pa</term>
+                            <term xml:lang="bo" type="attestedSource">བཀོད་པ་དྲི་མ་མེད་པ།</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">vimalavyūha</term>
                             <term type="definition">A park in the city of city of Kapilavastu.</term>
                         </gloss>
@@ -20700,8 +20701,8 @@
                     <item>
                         <gloss xml:id="UT22084-046-001-2476" type="person" mode="match">
                             <term>Kauṇḍinya</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested">kau N+Di n+ya</term>
-                            <term xml:lang="bo" type="sourceAttested">ཀཽ་ཎྜི་ནྱ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource">kau N+Di n+ya</term>
+                            <term xml:lang="bo" type="attestedSource">ཀཽ་ཎྜི་ནྱ།</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">kauṇḍinya</term>
                             <term type="definition">See Ājñāta­kauṇḍinya.</term>
                         </gloss>
@@ -21304,7 +21305,7 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss xml:id="UT22084-046-001-2531" type="person" mode="match">
+                        <gloss type="person" mode="match" xml:id="UT22084-046-001-5062">
                             <term>Cunda</term>
                             <term xml:lang="Bo-Ltn">skul byed</term>
                             <term xml:lang="bo">སྐུལ་བྱེད།</term>
@@ -22858,8 +22859,8 @@
                     <item>
                         <gloss xml:id="UT22084-046-001-2680" type="person" mode="marked">
                             <term>Pāṇḍava</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested">skya bseng</term>
-                            <term xml:lang="bo" type="sourceAttested">སྐྱ་བསེང་།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource">skya bseng</term>
+                            <term xml:lang="bo" type="attestedSource">སྐྱ་བསེང་།</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">pāṇḍava</term>
                             <term type="definition">Five brothers who were the sons of Pāṇḍu. The most renowned was <term>Arjuna</term> (of <title xml:lang="Sa-Ltn">Bhagavadgīta</title> fame); the other four were Yudhiṣṭhira, Nakula, Sahadeva, and Bhīmasena. The story of the Pāṇḍava brothers and their battle with their cousins, the Kauravas, is the subject of the Mahābhārata, India’s greatest epic. In the sūtra, Bali imprisons the Pāṇḍavas and Kauravas together.</term>
                         </gloss>
@@ -23611,8 +23612,8 @@
                     <item>
                         <gloss xml:id="UT22084-046-001-2751" type="person" mode="match">
                             <term>Sarvārthasiddha</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested">don thams cad grub pa</term>
-                            <term xml:lang="bo" type="sourceAttested">དོན་ཐམས་ཅད་གྲུབ་པ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource">don thams cad grub pa</term>
+                            <term xml:lang="bo" type="attestedSource">དོན་ཐམས་ཅད་གྲུབ་པ།</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">sarvārthasiddha</term>
                             <term type="definition">The personal name of the Buddha, meaning “one who accomplishes all aims.” Siddhārtha is a shorter form of this name.</term>
                         </gloss>
@@ -23694,8 +23695,8 @@
                     <item>
                         <gloss xml:id="UT22084-046-001-2760" type="person" mode="match">
                             <term>Siddhārtha</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested">don grub</term>
-                            <term xml:lang="bo" type="sourceAttested">དོན་གྲུབ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource">don grub</term>
+                            <term xml:lang="bo" type="attestedSource">དོན་གྲུབ།</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">siddhārtha</term>
                             <term type="definition">Lit. “One Who Accomplished His Aim.” The birth name given to the Bodhisattva by his father, King Śuddhodana. <emph>Siddhārtha</emph> is a short form of the name Sarvārthasiddha.</term>
                         </gloss>
@@ -24169,8 +24170,8 @@
                     <item>
                         <gloss xml:id="UT22084-046-001-2804" type="person" mode="match">
                             <term>Sunirmāṇarati</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested">rab ’phrul</term>
-                            <term xml:lang="bo" type="sourceAttested">རབ་འཕྲུལ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource">rab ’phrul</term>
+                            <term xml:lang="bo" type="attestedSource">རབ་འཕྲུལ།</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">sunirmāṇarati</term>
                             <term type="definition">The principal deity in the Nirmāṇarati paradise, the second highest paradise in the desire realm. Also called Sunirmita.</term>
                         </gloss>
@@ -24178,8 +24179,8 @@
                     <item>
                         <gloss xml:id="UT22084-046-001-2805" type="person" mode="match">
                             <term>Sunirmita</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested">rab ’phrul</term>
-                            <term xml:lang="bo" type="sourceAttested">རབ་འཕྲུལ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource">rab ’phrul</term>
+                            <term xml:lang="bo" type="attestedSource">རབ་འཕྲུལ།</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">sunirmita</term>
                             <term type="definition">The principal deity in the Nirmāṇarati paradise, the second highest paradise in the desire realm. Also called Sunirmāṇarati.</term>
                         </gloss>
@@ -25202,7 +25203,7 @@
                     </item>
                     <item>
                         <gloss type="term" xml:id="UT22084-046-001-2908">
-                            <term>bliss-gone one</term>
+                            <term>well-gone one</term>
                             <term xml:lang="Bo-Ltn"> bde bar gshegs pa </term>
                             <term xml:lang="bo">བདེ་བར་གཤེགས་པ།</term>
                             <term xml:lang="Sa-Ltn">sugata</term>
@@ -25566,8 +25567,8 @@
                     <item>
                         <gloss xml:id="UT22084-046-001-2945" type="term" mode="match">
                             <term>five basic precepts</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested">bslab pa’i gzhi lnga</term>
-                            <term xml:lang="bo" type="sourceAttested">བསླབ་པའི་གཞི་ལྔ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource">bslab pa’i gzhi lnga</term>
+                            <term xml:lang="bo" type="attestedSource">བསླབ་པའི་གཞི་ལྔ།</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">pañcaśikṣāpada</term>
                         </gloss>
                     </item>
@@ -25760,8 +25761,8 @@
                     <item>
                         <gloss xml:id="UT22084-046-001-2961" type="term" mode="match">
                             <term>garuḍa</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested">nam mkha’ lding</term>
-                            <term xml:lang="bo" type="sourceAttested">ནམ་མཁའ་ལྡིང་།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource">nam mkha’ lding</term>
+                            <term xml:lang="bo" type="attestedSource">ནམ་མཁའ་ལྡིང་།</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">garuḍa</term>
                             <term type="definition">Lower class of divine being, described as an eagle-type bird with a gigantic wingspan. They were traditionally enemies of the nāgas. In the Vedas, they were thought to have brought nectar from the heavens to earth.</term>
                         </gloss>
@@ -26371,8 +26372,8 @@
                     <item>
                         <gloss xml:id="UT22084-046-001-3026" type="term" mode="match">
                             <term>sage</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested">drang srong</term>
-                            <term xml:lang="bo" type="sourceAttested">དྲང་སྲོང་།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource">drang srong</term>
+                            <term xml:lang="bo" type="attestedSource">དྲང་སྲོང་།</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">ṛṣi</term>
                             <term type="definition">Indian <term type="ignore">sage</term>, wise man (often a wandering ascetic or hermit). This term was also used to render <foreign xml:lang="Sa-Ltn">muni</foreign> (<foreign xml:lang="Sa-Ltn">thub pa</foreign>), see “Able One.”</term>
                         </gloss>
@@ -26411,8 +26412,8 @@
                     <item>
                         <gloss xml:id="UT22084-046-001-3030" type="term" mode="match">
                             <term>scriptures</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested">bstan bcos</term>
-                            <term xml:lang="bo" type="sourceAttested">བསྟན་བཅོས།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource">bstan bcos</term>
+                            <term xml:lang="bo" type="attestedSource">བསྟན་བཅོས།</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śāstra</term>
                             <term type="definition">Commentarial texts.</term>
                         </gloss>
@@ -26435,10 +26436,10 @@
                     <item>
                         <gloss xml:id="UT22084-046-001-3033" type="term" mode="match">
                             <term>seven branches of awakening</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested">byang chub kyi yan lag bdun</term>
-                            <term xml:lang="bo" type="sourceAttested">བྱང་ཆུབ་ཀྱི་ཡན་ལག་བདུན།</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested">byang chub yan lag bdun</term>
-                            <term xml:lang="bo" type="sourceAttested">བྱང་ཆུབ་ཡན་ལག་བདུན།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource">byang chub kyi yan lag bdun</term>
+                            <term xml:lang="bo" type="attestedSource">བྱང་ཆུབ་ཀྱི་ཡན་ལག་བདུན།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource">byang chub yan lag bdun</term>
+                            <term xml:lang="bo" type="attestedSource">བྱང་ཆུབ་ཡན་ལག་བདུན།</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">saptabodhyaṅga</term>
                             <term type="definition">For an explanation of each branch, see <ptr target="#UT22084-046-001-172"/>.</term>
                         </gloss>
@@ -26467,8 +26468,8 @@
                     <item>
                         <gloss xml:id="UT22084-046-001-3035" type="term" mode="match">
                             <term>six perfections</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested">pha rol tu phyin pa drug</term>
-                            <term xml:lang="bo" type="sourceAttested">ཕ་རོལ་ཏུ་ཕྱིན་པ་དྲུག</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource">pha rol tu phyin pa drug</term>
+                            <term xml:lang="bo" type="attestedSource">ཕ་རོལ་ཏུ་ཕྱིན་པ་དྲུག</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">ṣaṭ pāramitāḥ</term>
                             <term type="definition">The trainings of the bodhisattva path: generosity, discipline, patience, diligence, concentration, and knowledge, or wisdom.</term>
                         </gloss>
@@ -26492,8 +26493,8 @@
                     <item>
                         <gloss xml:id="UT22084-046-001-3038" type="term" mode="match">
                             <term>starlight</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested">skar ma’i ’od zer</term>
-                            <term xml:lang="bo" type="sourceAttested">སྐར་མའི་འོད་ཟེར།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource">skar ma’i ’od zer</term>
+                            <term xml:lang="bo" type="attestedSource">སྐར་མའི་འོད་ཟེར།</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">nakṣatrajyotis</term>
                             <term type="definition">A type of precious jewels offered by the great king Kubera.</term>
                         </gloss>
@@ -26678,8 +26679,8 @@
                     <item>
                         <gloss xml:id="UT22084-046-001-3056" type="term" mode="match">
                             <term>uraga sandalwood</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested">tsan dan sbrul gyi snying po</term>
-                            <term xml:lang="bo" type="sourceAttested">ཙན་དན་སྦྲུལ་གྱི་སྙིང་པོ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource">tsan dan sbrul gyi snying po</term>
+                            <term xml:lang="bo" type="attestedSource">ཙན་དན་སྦྲུལ་གྱི་སྙིང་པོ།</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">uraga­sāra­candana</term>
                             <term type="definition">One kind of Indian sandalwood (<foreign type="term" xml:lang="la">Santalum album</foreign>) said to be “blue” on the inside. The name “essence of snakes” is said to come from snakes being particularly attracted to those trees.</term>
                         </gloss>
@@ -26736,8 +26737,8 @@
                     <item>
                         <gloss xml:id="UT22084-046-001-5039" type="term" mode="match">
                             <term>Three Vehicles</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested">theg pa gsum</term>
-                            <term xml:lang="bo" type="sourceAttested">ཐེག་པ་གསུམ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource">theg pa gsum</term>
+                            <term xml:lang="bo" type="attestedSource">ཐེག་པ་གསུམ།</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">triyāna</term>
                             <term type="alternative">yānatraya</term>
                             <term type="definition">In the context of the sūtras, the three vehicles are the Hearer, Solitary Buddha, and Bodhisattva Vehicles.</term>
@@ -26756,8 +26757,8 @@
                     <item>
                         <gloss xml:id="UT22084-046-001-3061" type="term" mode="match">
                             <term>victory banner</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested">rgyal mtshan</term>
-                            <term xml:lang="bo" type="sourceAttested">རྒྱལ་མཚན།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource">rgyal mtshan</term>
+                            <term xml:lang="bo" type="attestedSource">རྒྱལ་མཚན།</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">dhvaja</term>
                             <term type="definition">One of the eight auspicious symbols, often in the form of a roof-top ornament, representing the Buddha’s victory over malign forces.</term>
                         </gloss>
