--- a/translations/kangyur/placeholders/080-012_toh428-the_sovereign_tantra_in_four_parts.xml
+++ b/translations/kangyur/placeholders/080-012_toh428-the_sovereign_tantra_in_four_parts.xml
@@ -11,10 +11,10 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīcatuḥpīṭhamāha­yoginītantrarājanāma</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-080-012"/>
                 <date/>
             </publicationStmt>
@@ -30,7 +30,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-30T11:08:48.422Z" user="admin">30/06/2023 11:08:48</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:08:43.997Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:08:43.997Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-07-24T09:22:55.056Z" user="admin">24/07/2023 09:22:55</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:08:43.997Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:08:43.997Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T09:22:50.687Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-24T09:22:50.687Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
