--- a/translations/tengyur/placeholders/024-035_toh1607-sricaturpithatantrarajasmrtinibandhanamatika.xml
+++ b/translations/tengyur/placeholders/024-035_toh1607-sricaturpithatantrarajasmrtinibandhanamatika.xml
@@ -10,11 +10,11 @@
                 <title xml:lang="en" type="mainTitle">A Commentary on the “Sovereign Tantra in Four Parts” called “Binding the Memorable”</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT23703-024-035"/>
                 <date/>
             </publicationStmt>
@@ -34,7 +34,7 @@
                 <link type="isCommentaryOf" target="toh428"/>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-30T11:09:49.12Z" user="admin">30/06/2023 11:09:49</note>
+                <note type="lastUpdated" date-time="2023-07-24T09:24:06.231Z" user="admin">24/07/2023 09:24:06</note>
                 <note type="updated" update="import" value="fileDesc" import="tengyur-data-1607-1682_PH_new_v2.4.xml" date-time="2021-11-02T13:27:55.711Z" user="admin"/>
                 <note type="updated" update="general" import="tengyur-data-1607-1682_PH_new_v2.4.xml" date-time="2021-11-02T13:27:55.711Z" user="admin">Szánto (2012) notes that the author appears to have a Yogācāra predeliction, though nonetheless remains faithful to the sense of the text. He further notes
             that Bhavabhaṭṭa’s exegesis of the Catuṣpīṭha appears to have been quite influential as several passages appear verbatim in Abhayākaragupta’s Āmnāyamañjarī.</note>
@@ -42,6 +42,8 @@
     <note type="updated" update="text-version" value="0.0.1" date-time="2022-01-20T09:14:07.444Z" user="admin">Auto (correct-orphaned-attributions)</note>
     <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:09:44.786Z" user="line-tofte">4</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2023-06-30T11:09:44.786Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T09:24:02.004Z" user="line-tofte">3</note>
+    <note type="updated" update="text-version" value="0.0.3" date-time="2023-07-24T09:24:02.004Z" user="line-tofte">Auto (update-publication-status)</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
