--- a/translations/kangyur/placeholders/088-010_toh516,886-the_incantation_the_heap_of_flowers.xml
+++ b/translations/kangyur/placeholders/088-010_toh516,886-the_incantation_the_heap_of_flowers.xml
@@ -13,10 +13,10 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryapuṣpakūṭanāmadhāraṇī</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-088-010"/>
                 <date/>
             </publicationStmt>
@@ -41,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-30T11:21:45.723Z" user="admin">30/06/2023 11:21:45</note>    <note type="updated" update="translation-status" value="4" date-time="2023-01-20T13:13:58.019Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-01-20T13:13:58.019Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="" date-time="2023-05-11T13:33:02.339Z" user="line-tofte"/>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-11T13:33:02.339Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:21:41.373Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2023-06-30T11:21:41.373Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-07-24T10:50:05.582Z" user="admin">24/07/2023 10:50:05</note>    <note type="updated" update="translation-status" value="4" date-time="2023-01-20T13:13:58.019Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-01-20T13:13:58.019Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="" date-time="2023-05-11T13:33:02.339Z" user="line-tofte"/>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-11T13:33:02.339Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:21:41.373Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2023-06-30T11:21:41.373Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T10:50:01.32Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2023-07-24T10:50:01.32Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
