--- a/translations/kangyur/placeholders/088-023_toh529,888-the_great_incantation.xml
+++ b/translations/kangyur/placeholders/088-023_toh529,888-the_great_incantation.xml
@@ -13,10 +13,10 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamahādhāraṇī</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-088-023"/>
                 <date/>
             </publicationStmt>
@@ -41,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-30T11:26:09.446Z" user="admin">30/06/2023 11:26:09</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:26:05.106Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:26:05.106Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-07-24T11:16:30.083Z" user="admin">24/07/2023 11:16:30</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:26:05.106Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:26:05.106Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T11:16:25.828Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-24T11:16:25.828Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
