--- a/translations/kangyur/placeholders/090-004_toh560-the_essence_of_the_peahen_queen_of_spells.xml
+++ b/translations/kangyur/placeholders/090-004_toh560-the_essence_of_the_peahen_queen_of_spells.xml
@@ -12,10 +12,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rig sngags kyi rgyal mo rma bya'i yang snying zhes bya ba/</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-090-004"/>
                 <date/>
             </publicationStmt>
@@ -31,9 +31,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-30T11:28:03.562Z" user="admin">30/06/2023 11:28:03</note>
+                <note type="lastUpdated" date-time="2023-07-24T11:19:06.886Z" user="admin">24/07/2023 11:19:06</note>
                 <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:27:59.214Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2023-06-30T11:27:59.214Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="3" date-time="2023-07-24T11:19:02.624Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-07-24T11:19:02.624Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
