--- a/translations/kangyur/placeholders/090-029_toh585,941-essence_of_the_gandavyuha.xml
+++ b/translations/kangyur/placeholders/090-029_toh585,941-essence_of_the_gandavyuha.xml
@@ -11,10 +11,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sdong po bkod pa'i snying po/</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-090-029"/>
                 <date/>
             </publicationStmt>
@@ -39,7 +39,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-30T11:30:29.598Z" user="admin">30/06/2023 11:30:29</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:30:25.249Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:30:25.249Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-07-24T11:26:43.516Z" user="admin">24/07/2023 11:26:43</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:30:25.249Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:30:25.249Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T11:26:39.246Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-24T11:26:39.246Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
