--- a/translations/kangyur/placeholders/090-030_toh586,942-the_incantation_that_captures_the_samadhirajasutra.xml
+++ b/translations/kangyur/placeholders/090-030_toh586,942-the_incantation_that_captures_the_samadhirajasutra.xml
@@ -13,10 +13,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa ting nge 'dzin gyi rgyal po'i mdo gzung bar 'gyur ba'i gzungs/</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-090-030"/>
                 <date/>
             </publicationStmt>
@@ -41,9 +41,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-30T11:31:03.098Z" user="admin">30/06/2023 11:31:03</note>
+                <note type="lastUpdated" date-time="2023-07-24T11:28:16.487Z" user="admin">24/07/2023 11:28:16</note>
                 <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:30:58.749Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:30:58.749Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2023-07-24T11:28:12.22Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-24T11:28:12.22Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
