--- a/translations/kangyur/placeholders/090-032_toh588,944-the_incantation_that_captures_the_great_amulet.xml
+++ b/translations/kangyur/placeholders/090-032_toh588,944-the_incantation_that_captures_the_great_amulet.xml
@@ -12,10 +12,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa so sor 'brang ma chen mo gzung bar 'gyur ba'i gzungs/</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-090-032"/>
                 <date/>
             </publicationStmt>
@@ -40,7 +40,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-30T11:32:20.339Z" user="admin">30/06/2023 11:32:20</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:32:16.02Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:32:16.02Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-07-24T11:43:54.632Z" user="admin">24/07/2023 11:43:54</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:32:16.02Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:32:16.02Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T11:43:50.362Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-24T11:43:50.362Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
