--- a/translations/kangyur/placeholders/090-033_toh589,945-the_incantation_of_the_descent_to_lanka_sutra.xml
+++ b/translations/kangyur/placeholders/090-033_toh589,945-the_incantation_of_the_descent_to_lanka_sutra.xml
@@ -13,10 +13,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lang dkar gshegs pa'i mdo thams cad bklags par 'gyur ba'i gzungs sngags/</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-090-033"/>
                 <date/>
             </publicationStmt>
@@ -41,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-30T11:32:53.113Z" user="admin">30/06/2023 11:32:53</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:32:48.791Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:32:48.791Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-07-24T11:45:18.071Z" user="admin">24/07/2023 11:45:18</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:32:48.791Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:32:48.791Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T11:45:13.803Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-24T11:45:13.803Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
