--- a/translations/kangyur/placeholders/091-003_toh606,958-the_incantation_of_mahadanda.xml
+++ b/translations/kangyur/placeholders/091-003_toh606,958-the_incantation_of_mahadanda.xml
@@ -13,10 +13,10 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamahādaṇḍanāmadhāraṇī</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-091-003"/>
                 <date/>
             </publicationStmt>
@@ -41,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-30T11:33:31.669Z" user="admin">30/06/2023 11:33:31</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:33:27.316Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:33:27.316Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-07-24T11:46:45.392Z" user="admin">24/07/2023 11:46:45</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:33:27.316Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:33:27.316Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T11:46:41.137Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-24T11:46:41.137Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
