--- a/translations/kangyur/placeholders/091-050_toh653,1062-the_mahasutra_the_sutra_of_the_great_assembly.xml
+++ b/translations/kangyur/placeholders/091-050_toh653,1062-the_mahasutra_the_sutra_of_the_great_assembly.xml
@@ -15,10 +15,10 @@
                 <title type="otherTitle" xml:lang="en">[Note: cf Toh 34 for the Theravādin version]</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-091-050"/>
                 <date/>
             </publicationStmt>
@@ -43,7 +43,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-30T11:34:07.942Z" user="admin">30/06/2023 11:34:07</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:34:03.575Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:34:03.575Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-07-24T11:48:17.317Z" user="admin">24/07/2023 11:48:17</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:34:03.575Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:34:03.575Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T11:48:13.051Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-24T11:48:13.051Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
