--- a/translations/kangyur/placeholders/091-053_toh656,1061-the_mahasutra_the_atanatiya_sutra.xml
+++ b/translations/kangyur/placeholders/091-053_toh656,1061-the_mahasutra_the_atanatiya_sutra.xml
@@ -15,10 +15,10 @@
                 <title type="otherTitle" xml:lang="en">[Note: cf Toh 33 for the Theravādin version]</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-091-053"/>
                 <date/>
             </publicationStmt>
@@ -43,7 +43,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-30T11:34:42.669Z" user="admin">30/06/2023 11:34:42</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:34:38.338Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:34:38.338Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-07-24T11:51:15.182Z" user="admin">24/07/2023 11:51:15</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:34:38.338Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:34:38.338Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T11:51:10.911Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-24T11:51:10.911Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
