--- a/translations/kangyur/placeholders/091-059_toh662,1007-the_incantation_of_vasudhara.xml
+++ b/translations/kangyur/placeholders/091-059_toh662,1007-the_incantation_of_vasudhara.xml
@@ -13,10 +13,10 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryavasudhārānāmadhāraṇī</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-091-059"/>
                 <date/>
             </publicationStmt>
@@ -41,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-30T11:35:20.888Z" user="admin">30/06/2023 11:35:20</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:35:16.554Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:35:16.554Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-07-24T11:52:33.471Z" user="admin">24/07/2023 11:52:33</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:35:16.554Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:35:16.554Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T11:52:29.219Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-24T11:52:29.219Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
