--- a/translations/kangyur/placeholders/091-061_toh664-the_practice_of_the_incantation_of_vasudhara.xml
+++ b/translations/kangyur/placeholders/091-061_toh664-the_practice_of_the_incantation_of_vasudhara.xml
@@ -10,10 +10,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">bcom ldan 'das ma nor rgyun ma'i gzungs kyi rtog pa/</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-091-061"/>
                 <date/>
             </publicationStmt>
@@ -29,7 +29,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-30T11:36:31.33Z" user="admin">30/06/2023 11:36:31</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:36:26.985Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:36:26.985Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-07-24T11:56:01.418Z" user="admin">24/07/2023 11:56:01</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:36:26.985Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:36:26.985Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T11:55:57.156Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-24T11:55:57.156Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
