--- a/translations/kangyur/placeholders/091-082_toh684-the_incantation_the_questions_of_narayana.xml
+++ b/translations/kangyur/placeholders/091-082_toh684-the_incantation_the_questions_of_narayana.xml
@@ -12,10 +12,10 @@
                 <title type="otherTitle" xml:lang="en">[Note: only in late Degé printings; not in Degé par phud, nor in Narthang, Peking, Cone, Lhasa, or Urga Kangyurs.]</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-091-082"/>
                 <date/>
             </publicationStmt>
@@ -31,7 +31,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-30T11:37:02.27Z" user="admin">30/06/2023 11:37:02</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:36:57.931Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:36:57.931Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-07-24T11:57:23.953Z" user="admin">24/07/2023 11:57:23</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:36:57.931Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:36:57.931Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T11:57:19.688Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-24T11:57:19.688Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
