--- a/translations/kangyur/placeholders/093-012_toh697,905-the_incantation_of_nilakantha.xml
+++ b/translations/kangyur/placeholders/093-012_toh697,905-the_incantation_of_nilakantha.xml
@@ -13,10 +13,10 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryanīlakaṇṭhanāmadhāraṇī</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-093-012"/>
                 <date/>
             </publicationStmt>
@@ -41,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-30T11:37:35.135Z" user="admin">30/06/2023 11:37:35</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:37:30.797Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:37:30.797Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-07-24T11:58:43.856Z" user="admin">24/07/2023 11:58:43</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:37:30.797Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:37:30.797Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T11:58:39.599Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-24T11:58:39.599Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
