--- a/translations/kangyur/placeholders/093-025_toh710,930-the_incantation_known_as_the_thousandfold.xml
+++ b/translations/kangyur/placeholders/093-025_toh710,930-the_incantation_known_as_the_thousandfold.xml
@@ -11,10 +11,10 @@
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī “The Thousandfold”</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-093-025"/>
                 <date/>
             </publicationStmt>
@@ -39,7 +39,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-30T11:38:14.119Z" user="admin">30/06/2023 11:38:14</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:38:09.805Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:38:09.805Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-07-24T12:02:05.4Z" user="admin">24/07/2023 12:02:05</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:38:09.805Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:38:09.805Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T12:02:01.152Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-24T12:02:01.152Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
