--- a/translations/kangyur/placeholders/094-018_toh741,1006-the_twelve_names_of_sri_mahadevi.xml
+++ b/translations/kangyur/placeholders/094-018_toh741,1006-the_twelve_names_of_sri_mahadevi.xml
@@ -9,10 +9,10 @@
                 <title type="mainTitle" xml:lang="en">The Twelve Names of Śrī Mahādevī</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-094-018"/>
                 <date/>
             </publicationStmt>
@@ -37,7 +37,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-30T11:38:46.575Z" user="admin">30/06/2023 11:38:46</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:38:42.244Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:38:42.244Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-07-24T12:07:17.695Z" user="admin">24/07/2023 12:07:17</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:38:42.244Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:38:42.244Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T12:07:13.429Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-24T12:07:13.429Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
