--- a/translations/kangyur/placeholders/094-020_toh743,1009-the_incantation_that_cleanses_all_the_obscurations_of_karma.xml
+++ b/translations/kangyur/placeholders/094-020_toh743,1009-the_incantation_that_cleanses_all_the_obscurations_of_karma.xml
@@ -13,10 +13,10 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasarva­karmāvaraṇaviśodhanī­nāmadhāraṇī</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-094-020"/>
                 <date/>
             </publicationStmt>
@@ -41,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-30T11:39:18.482Z" user="admin">30/06/2023 11:39:18</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:39:14.129Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:39:14.129Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-07-24T12:08:37.051Z" user="admin">24/07/2023 12:08:37</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:39:14.129Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:39:14.129Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T12:08:32.796Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-24T12:08:32.796Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
