--- a/translations/kangyur/placeholders/096-008_toh759,964-the_vow_of_the_naga_vajratunda.xml
+++ b/translations/kangyur/placeholders/096-008_toh759,964-the_vow_of_the_naga_vajratunda.xml
@@ -13,10 +13,10 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">vajratuṇḍanāmanāgasamaya</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-096-008"/>
                 <date/>
             </publicationStmt>
@@ -41,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-30T11:39:49.124Z" user="admin">30/06/2023 11:39:49</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:39:44.803Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:39:44.803Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-07-24T12:09:58.644Z" user="admin">24/07/2023 12:09:58</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:39:44.803Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:39:44.803Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T12:09:54.382Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-24T12:09:54.382Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
