--- a/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light.xml
+++ b/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light.xml
@@ -41,7 +41,7 @@
                 <sponsor ref="sponsors.xml#sponsor-181">Zhang Dada</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -78,7 +78,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-20T22:59:14.219Z" user="admin">20/07/2023 22:59:14</note>
+                <note type="lastUpdated" date-time="2023-07-24T12:19:35.1Z" user="admin">24/07/2023 12:19:35</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-06T13:46:43.307Z" user="line-tofte">2.h</note>
@@ -129,6 +129,7 @@
                 <note type="updated" update="text-version" value="1.0.1" date-time="2023-07-09T15:26:56.482Z" user="andre">Minor edits to the glossary.</note>
                 <note type="updated" update="text-version" value="1.0.2" date-time="2023-07-11T18:33:44.706Z" user="celso">Fixed bad links to Chinese Tripitika</note>
                 <note type="updated" update="text-version" value="1.0.3" date-time="2023-07-20T22:59:11.079Z" user="martina-cotter">Updated typo.</note>
+                <note type="updated" update="text-version" value="1.0.4" date-time="2023-07-24T12:19:32.086Z" user="martina-cotter">updated typo and deleted note.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1327,7 +1328,7 @@
                         heads to the feet of the Bhagavat, circumambulated him three times, keeping
                         him to their right, and then sat to one side.</p>
                     <milestone unit="chunk" xml:id="UT22084-089-012-166"/>
-                    <p tid="159">Also gathered there were an entourage of 66,000<note place="end" xml:id="UT22084-089-012-167"> YJ has <foreign xml:lang="zh">三萬六千</foreign> (“36,000”).</note> yakṣas. The principal ones among
+                    <p tid="159">Also gathered there were an entourage of 36,000 yakṣas. The principal ones among
                         them, led by King Virūpākṣa,<note place="end" xml:id="UT22084-089-012-168">
                             Toh 556 reads Vaiśravaṇa (<foreign xml:lang="Bo-Ltn">rnam thos kyi
                                 bu</foreign>).</note> were Yakṣa Amra, Yakṣa Amradhara, Yakṣa Padmaprabha, Yakṣa
