--- a/translations/kangyur/translations/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
+++ b/translations/kangyur/translations/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
@@ -22,7 +22,7 @@
                                         Gu</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2022</date>
+                <edition>v 1.0.1 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -73,7 +73,7 @@
                         </sourceDesc>
                         <notesStmt>
                                 <note>Note: not identified in Toh.</note>
-                                <note type="lastUpdated" date-time="2023-07-24T12:48:58.356Z" user="admin">24/07/2023 12:48:58</note>
+                                <note type="lastUpdated" date-time="2023-07-24T13:57:33.692Z" user="admin">24/07/2023 13:57:33</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2021-01-12T15:49:02.772Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-01-12T15:49:02.772Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-14T10:25:08.293Z" user="line-tofte">Auto
@@ -118,6 +118,7 @@
                             <note type="updated" update="text-version" value="0.0.4" date-time="2023-07-20T13:35:01.88Z" user="line-tofte">Auto (update-contributors)</note>
                             <note type="updated" update="translation-status" value="1.a" date-time="2023-07-24T12:48:53.272Z" user="martina-cotter">1.a</note>
                             <note type="updated" update="text-version" value="1.0.0" date-time="2023-07-24T12:48:53.272Z" user="martina-cotter">1.0.0</note>
+                            <note type="updated" update="text-version" value="1.0.1" date-time="2023-07-24T13:57:30.871Z" user="konchog">Two fixes in the intro and three in the notes.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -169,13 +170,13 @@
                                                           </title>, Toh 505 (84000: Translating the Words of the Buddha).</note>-->
                                                 where it appears as the final part of the
                                                 longer dhāraṇī taught there. The short mantra
-                                                presented in <title xml:lang="en">Mantra for Incanting Medicines When Administering
+                                                presented in <title xml:lang="en">A Mantra for Incanting Medicines When Administering
                                                   Them</title> was later incorporated into the
                                                 <title xml:lang="Sa-Ltn">Aṣṭāṅga­hṛdaya­saṃhitā</title> and
                                                 <title xml:lang="Sa-Ltn">Aṣtāṅga­saṅgraha</title>, two important works of
                                                 the Indian Āyurvedic medical tradition that are
                                                 believed to have been composed by Vāgbhaṭa (ca. 600
-                                                  CE).<note place="end" xml:id="UT22084-087-011-7">
+                                                <hi rend="small-caps">CE</hi>).<note place="end" xml:id="UT22084-087-011-7">
                                                   It has been argued, tentatively, that Vāgbhaṭa was
                                                   a Buddhist. For more on Vāgbhaṭa and his works,
                                                   see Meulenbeld 1999, pp. 597–656 and Wujastyk
@@ -290,12 +291,12 @@
                                                   the <foreign xml:lang="Bo-Ltn">’phags pa de bzhin gshegs pa sman gyi bla
                                                   bai DU rya ’od kyi sngon gyi smon lam gyi khyad
                                                   par rgyas pa</foreign> (no. 148; Hermann-Pfandt 2008,
-                                                  p.81) and the Phangthangma lists <foreign xml:lang="Bo-Ltn">de bzhin
+                                                  p. 81) and the Phangthangma lists <foreign xml:lang="Bo-Ltn">de bzhin
                                                   gshegs pa sman gyi bla be dur rya’i sngon gyi smon
                                                   lam chen po</foreign> (no. 117) and the <foreign xml:lang="Bo-Ltn">de bzhin
                                                   gshegs pa sman gyi bla be dur rya’i ’od kyi smon
                                                   lam chen po chung ngu</foreign> (no. 179; Kawagoe
-                                                  2005, p. 11 and 13). </note> thus indicating that
+                                                  2005, pp. 11 and 13). </note> thus indicating that
                                                 Medicine Buddha practices were being translated into
                                                 Tibetan in the eighth and ninth centuries. </p>
                                         <milestone unit="chunk" xml:id="UT22084-087-011-14"/>
@@ -353,7 +354,7 @@
                                                   oṁ bhaiṣajye bhaiṣajye mahābhaiṣajye bhaiṣajye
                                                   samudgate svāhā</mantra>
                         <note place="end" xml:id="UT22084-087-011-24"> The final line of the
-                                                  dhāraṇī that appears in Toh 505 reads: <mantra xml:lang="Sa-Ltn">tadyathā oṁ bhaṣajya bhaiṣajya
+                                                  dhāraṇī that appears in Toh 505 reads <mantra xml:lang="Sa-Ltn">tadyathā oṁ bhaṣajya bhaiṣajya
                                                   mahābhaiṣajya samudgate svāhā</mantra>.</note>
                     </p>
                                         <milestone unit="chunk" xml:id="UT22084-087-011-25"/>
